Fall back to using gx_default_copy_mono() in pclxl_copy_mono() if data_x!=0.

Details:

Fixes bug 688992.  Will increase the size of the generated PXL file in some cases; a better solution would be to modify the pclxl_write_image_data()function to handle data_x!=0.

Expected regressions:

None, pxlmono isn't covered in the regression suite.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8576 a1074d23-0009-0410-80fe-cf8c14f379e6